--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,28 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/job-searching-platform
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Job_Search
 spring.datasource.username=spring_root
 spring.datasource.password=spring_mysql_123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql: true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.generate-ddl=true
+
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=src/main/resources/keystore/Certificate.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=smile32
+
+server.ssl.enabled=true
+
+#trust store location
+trust.store=classpath:keystore/Certificate.p12
+#trust store password
+trust.store.password=smile32
+
+server.port=443
+
+spring.messages.basename=validation
 
