implemented basic functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ server.port=443
 
 spring.messages.basename=validation
 
+document.location=/Users/sachinvel/git/job-searching-platform/src/main/resources/documents
+
