--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,5 +1,7 @@
 NotEmpty=This field is required.
+stringExcessLength=This field should be less than 255 characters.
 Size.userForm.username=Please use between 6 and 32 characters.
 Duplicate.userForm.username=Someone already has that username.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
+contactInfo.badFormat=The phone number is not in correct format
