add regsitration and login validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,11 @@ trust.store.password=smile32
 
 server.port=443
 
+security.enable-csrf=true
+
+server.error.whitelabel.enabled=false
+
+
 spring.messages.basename=validation
 
 document.location=/Users/sachinvel/git/job-searching-platform/src/main/resources/documents
