--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,3 +5,12 @@ Duplicate.userForm.username=Someone already has that username.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
 contactInfo.badFormat=The phone number is not in correct format
+
+username.nonAlphaNumeric=Username should contain only alphanumeric
+password.requireNumber=Password should contain at least one numeric character
+password.requireUppercase=Password should contain at least one uppercase character
+password.requireLowercase=Password should contain at least one lowercase character
+password.requireSpecialChar=Password should contain at least one special character
+
+document.maxFileSize=The File size should be less than 1 MB
+document.maxUpload=User cannot upload more than 5 files
