--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,10 +24,14 @@ trust.store.password=smile32
 
 server.port=443
 
+logging.level.org.springframework.web=DEBUG
+logging.level.com.jobs.jobsearch=DEBUG
+logging.file.name= application.log
+
 security.enable-csrf=true
 
 server.error.whitelabel.enabled=false
-
+spring.cache.type=NONE
 
 spring.messages.basename=validation
 
