add search and other logging functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,8 @@ trust.store.password=smile32
 
 server.port=443
 
+spring.main.allow-circular-references=true
+
 logging.level.org.springframework.web=DEBUG
 logging.level.com.jobs.jobsearch=DEBUG
 logging.file.name= application.log
