--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/Job_Search
-spring.datasource.username=spring_root
+spring.datasource.url=jdbc:mysql://localhost:3306/job_search
+spring.datasource.username=springroot
 spring.datasource.password=spring_mysql_123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
@@ -37,5 +37,5 @@ spring.cache.type=NONE
 
 spring.messages.basename=validation
 
-document.location=/Users/sachinvel/git/job-searching-platform/src/main/resources/documents
+project.location=/Users/sachinvel/git/job-searching-platform/
 
