resolve mail issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,14 +15,14 @@ server.ssl.key-store=src/main/resources/keystore/Certificate.p12
 # The password used to generate the certificate
 server.ssl.key-store-password=smile32
 
-server.ssl.enabled=true
+server.ssl.enabled=false
 
 #trust store location
 trust.store=classpath:keystore/Certificate.p12
 #trust store password
 trust.store.password=smile32
 
-server.port=443
+server.port=3000
 
 spring.main.allow-circular-references=true
 
