change mysql server domain to aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/job_search
-spring.datasource.username=springroot
-spring.datasource.password=spring_mysql_123
+spring.datasource.url=jdbc:mysql://job-search.cx9wn41dj9vd.us-east-1.rds.amazonaws.com:3306/job_search
+spring.datasource.username=admin
+spring.datasource.password=Smile*32
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
