--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
 	<name>jobsearch</name>
 	<description>A job search portal</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
