--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,20 +9,20 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
 
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
+#server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=src/main/resources/keystore/Certificate.p12
+#server.ssl.key-store=src/main/resources/keystore/Certificate.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=smile32
+#server.ssl.key-store-password=smile32
 
-server.ssl.enabled=false
+#server.ssl.enabled=false
 
 #trust store location
-trust.store=classpath:keystore/Certificate.p12
+#trust.store=classpath:keystore/Certificate.p12
 #trust store password
-trust.store.password=smile32
+#trust.store.password=smile32
 
-server.port=8080
+server.port=${PORT:8080}
 
 spring.main.allow-circular-references=true
 
