--- a/pom.xml
+++ b/pom.xml
@@ -127,18 +127,18 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-<!--				<plugin>-->
-<!--					<groupId>org.springframework.boot</groupId>-->
-<!--					<artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--				</plugin>-->
-<!--				<plugin>-->
-<!--					<groupId>org.apache.maven.plugins</groupId>-->
-<!--					<artifactId>maven-surefire-plugin</artifactId>-->
-<!--					<version>3.1.0</version>-->
-<!--					<configuration>-->
-<!--						<skipTests>true</skipTests>-->
-<!--					</configuration>-->
-<!--				</plugin>-->
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.1.0</version>
+					<configuration>
+						<skipTests>true</skipTests>
+					</configuration>
+				</plugin>
 				<plugin>
 					<groupId>com.google.cloud.tools</groupId>
 					<artifactId>appengine-maven-plugin</artifactId>
