--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>A job search portal</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.jobs.jobsearch.JobsearchApplication</start-class>
 	</properties>
 	<packaging>jar</packaging>
 	<dependencies>
@@ -122,6 +123,22 @@
 			<version>1.10.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>2.20.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -130,6 +147,17 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<mainClass>com.jobs.jobsearch.JobsearchApplication</mainClass>
+						<layout>JAR</layout>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>repackage</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
