--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+application.log
 
 ### STS ###
 .apt_generated
@@ -31,6 +32,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-src/main/resources/documents
-application.log*
