--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ server.error.whitelabel.enabled=false
 spring.cache.type=NONE
 spring.messages.basename=validation
 
-project.location=/Users/sachinvel/git/job-searching-platform/
+project.location=./
 
